--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.2.2",
+    "@aws-amplify/ui-vue": "^4.2.6",
     "@vueuse/core": "^10.9.0",
+    "aws-amplify": "^6.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.376.0",
