Create LinkWithTooltip component

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -17,7 +17,9 @@
           ],
           "passwordPolicyMinLength": 8
         },
-        "signupAttributes": [],
+        "signupAttributes": [
+          "NICKNAME"
+        ],
         "socialProviders": [],
         "usernameAttributes": [
           "EMAIL"
