Add Quiz view file and update routes
Signed-off-by: Taisia Simakova <stipaxa@gmail.com>

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -18,7 +18,9 @@
           "passwordPolicyMinLength": 8
         },
         "signupAttributes": [
-          "NICKNAME"
+          "EMAIL",
+          "NICKNAME",
+          "NAME"
         ],
         "socialProviders": [],
         "usernameAttributes": [
